--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "webpack-log": "^3.0.1"
   },
   "dependencies": {
-    "@cocreate/actions": "1.20.0",
-    "@cocreate/element-prototype": "1.29.0",
-    "@cocreate/observer": "1.17.0",
-    "@cocreate/utils": "1.37.0"
+    "@cocreate/actions": "^1.21.1",
+    "@cocreate/element-prototype": "^1.29.1",
+    "@cocreate/observer": "^1.18.1",
+    "@cocreate/utils": "^1.39.0"
   }
 }
